--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
 		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> from our article in Communications of the ACM.
-					<li>	 	         	 	   
-		<a href = "https://cs3213-fse.github.io/">A project course</a> building intelligent tutoring system based on program repair. 
+					
 				</ul>
 		</font></p>
 	
@@ -90,8 +89,8 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
-		<a href = "https://cs3213-fse.github.io/">Software engineering project course</a>: intelligent tutoring system based on program repair. 
-		Let me know if you are interested in adopting it for teaching!</font></p>
+		<a href = "https://cs3213-fse.github.io/">A project course</a>: building intelligent tutoring system for teaching programming based on program repair. 
+			</font></p>
 	</ul>
  	 	
 
