--- a/index.html
+++ b/index.html
@@ -279,6 +279,9 @@
 	<ul>
 		<li>
 		Recent developments:<ul>
+			<li> <i>[Jan23]&nbsp; </i>
+			We are honored to receive <a href="http://www.icse-conferences.org/mostinfluential.html"> ICSE Most Influential Paper Award </a>
+			for ICSE13 paper "SemFix: Program Repair via Semantic Analysis". 
 			<li><i>[Mar22]&nbsp; </i>
 			Honored to receive IEEE TCSE New Directions Award, jointly with 
 				<a href ="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, 
