--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
-		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> from our article in Communications of the ACM.
+		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> from our article in Communications of the ACM 
+						(co-authors: Le Goues, Pradel).
 					
 				</ul>
 		</font></p>
