--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<font face="Arial">
 			Work on program repair recognized by International Conference on Software Engineering 
 		<b> <a href = "http://www.icse-conferences.org/mostinfluential.html"> 
-			Most Influential Paper Award</a></b> for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis" (co-authors: Nguyen, Qi, Chandra).
+			Most Influential Paper Award</a></b> for <a ref ="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">ICSE2013 paper</a>.
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
