--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 			Work on program repair recognized by International Conference on Software Engineering 
-		<b> <a href = "http://www.icse-conferences.org/mostinfluential.html"> 
-			Most Influential Paper Award</a></b> for <a ref ="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">ICSE2013 paper</a>.
+		 <a href = "http://www.icse-conferences.org/mostinfluential.html"> 
+			Most Influential Paper Award</a> for <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">ICSE2013 paper</a> on program repair.
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
