--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<font face="Arial">
 			Work on program repair recognized by International Conference on Software Engineering 
 		 <a href = "http://www.icse-conferences.org/mostinfluential.html"> 
-			Most Influential Paper Award</a> for <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">ICSE2013 paper</a> on program repair.
+			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>.
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
