--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
-		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> from 
+		video</a> </b>on <a href="https://nus-apr.github.io">program repair</a> from 
 						<a href="pdf/CACM19.pdf">our article</a> 
 						in Communications of the ACM.
 					
