--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
 		video</a> </b>on <a href="https://nus-apr.github.io">program repair</a> from 
-						<a href="pdf/CACM19.pdf">our article</a> 
-						in Communications of the ACM.
+						another article on program repair in Communications of the ACM.
 				</ul>
 		</font></p>
 	
