--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 			Program Repair (<b><a href = "https://www.youtube.com/watch?v=Y2JkW4LjdUA">VIDEO</a></b>).
 		</font></p>	
 			
-	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 
-	<a/> in recognition of contributions to symbolic execution for test generation and program repair (joint with Cristian Cadar).
+	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 2022
+	<a/> for contributions to symbolic execution and its usage in testing / repair (joint with Cristian Cadar).
 			</font></p>
 		
 		<li>
