--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</font></p>	
 			
 	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 2022
-	<a/> for contributions to symbolic execution and its usage in testing / repair (joint with Cristian Cadar).
+	<a/> for contributions to symbolic execution (jointly with Cristian Cadar).
 			</font></p>
 		
 		<li>
@@ -116,8 +116,8 @@
 		International Conference on Software Engineering (ICSE) and Symposium on Foundations of Software Engineering (FSE). 
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne, Beihang University). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
-		for contributions to symbolic execution as well as its usage in software testing and program repair. 
-		The work on program repair received the ICSE 2023 Most Influentual Paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis". </font></p>
+		for contributions to symbolic execution. His work on program repair was recognized by the ICSE 2023 Most Influentual Paper Award 
+		for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis". </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
