--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne, Beihang University). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
 		for contributions to symbolic execution. His work on program repair was recognized by the ICSE 2023 Most Influentual Paper Award 
-		for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis". </font></p>
+		for an ICSE 2013 paper suggesting semantic approaches towards program repair. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
