--- a/students.htm
+++ b/students.htm
@@ -60,12 +60,15 @@ A recent group photograph taken in 2022 May. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
   <p style="margin-top: 1; margin-bottom: 1">&nbsp;</p>
 <p style="margin-top: 1; margin-bottom: 1">
 <font face="Arial" color="#800080" size="5">
+	
+	<p><a href="ridwan.jpg">
+<img border="2" src="ridwan_small.jpg" xthumbnail-orig-image="ridwan.jpg"></a></p>
+<p><font face="Arial" size="2"><b><a href="https://rshariffdeen.github.io/">Ridwan Shariffdeen</a></b>, Joined January 2023 as postdoc,
+<i>Software Vulnerability Repair.</i></font></p>
+
 <b>Current 
   PhD Students&nbsp; </b></font></p>
-<p><a href="ridwan.jpg">
-<img border="2" src="ridwan_small.jpg" xthumbnail-orig-image="ridwan.jpg"></a></p>
-<p><font face="Arial" size="2"><b><a href="https://rshariffdeen.github.io/">Ridwan Shariffdeen</a></b>, Joined January 2018,
-<i>Software Vulnerability Repair.</i></font></p>
+
 <p><a href="zhiyu.JPG.jpeg">
 <img border="2" src="zhiyu.JPG_small.jpeg" xthumbnail-orig-image="zhiyu.JPG.jpeg"></a></p>
 <p><font face="Arial" size="2"><b><a href="https://zhiyufan.github.io">Zhiyu Fan</a></b>, Joined August 2019,&nbsp;
@@ -100,6 +103,10 @@ student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 <p><a href="mirchev.jpg">
 <img border="2" src="mirchev_small.jpg" xthumbnail-orig-image="mirchev.jpg"></a></p>
 <p><font face="Arial" size="2"><b>Martin Mirchev</b>, August 2022 (PhD student).
+	
+	<p>
+	<font face="Arial" size="2"><b>Ali El-Husseini</b>, Joined January 2023 (PhD student under CNRS-CREATE program).	
+	
 </font></p>
 <hr>
 
