--- a/students.htm
+++ b/students.htm
@@ -110,7 +110,7 @@ student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 	<br>
 	
 	<p>
-	<font face="Arial" size="2"><b>Ali El-Husseini</b>, Joined January 2023 (PhD student).	
+	<font face="Arial" size="2"><b>Ali El-Husseini</b>, Joined January 2023 (PhD student, CNRS CREATE).	
 	
 </font></p>
 	<br>
