--- a/awards.html
+++ b/awards.html
@@ -5,6 +5,9 @@
 <H3><font face="Arial">Abhik Roychoudhury</font><font size="5" face="Arial">       </font></H3> 
 		<H3><font size="2" face="Arial">Professor<br>               <a href="http://www.comp.nus.edu.sg/"><font color="#800080">School  		of Computing</font></a><br>            National University of Singapore</font></H3> 		<H3><font size="2" face="Arial">abhik at comp dot nus dot edu dot sg</font></H3> 		<p>&nbsp;</p>         </blockquote>       </DIV></TD>     <TD width="349">       &nbsp;</TD>   </TR></TBODY></TABLE>    <p style="margin-top: 0; margin-bottom: 0">&nbsp;<hr>   <p style="margin-top: 0; margin-bottom: 0"> <b><font face="Arial" size="4" color="#800080">Awards 
 	and Honors</font></b><ul>
+	<li> International Conference on Software Engineering (ICSE) 10 year Most Influential Paper Award 2023 for ICSE13 paper SemFix. 
+	<li> 
+	IEEE TCSE New Directions Award 2022, awarded jointly with Cristian Cadar, for contributions to symbolic execution.	
 	<li>
 	<p style="margin-top: 0; margin-bottom: 0"><font face="Arial" size="2">ACM 
 	Distinguished Member, 2020.</font></li>
