--- a/students.htm
+++ b/students.htm
@@ -165,9 +165,7 @@ Award 2018, <i>Best PhD thesis 2018</i></b>, University College London (UCL) as
 <p><font face="Arial" size="2"><b><a href="http://www.shinhwei.com">
 <font color="#800080">Shin Hwei Tan</font></a></b>, 
 				<i><a href="Students/ShinHwei.pdf">Design of repair operators for automated program repair</a>, 
-				</i>graduated 2018, moved to
-		<a href="http://www.sustc.edu.cn/en">SUSTech</a> as Assistant 
-		Professor.</font></p>
+				</i>graduated 2018, Associate Professor (Gina Cody Research Chair), Concordia University, Canada.</font></p>
 <p><a href="thuan.jpg">
 <img border="2" src="thuan_small.jpg" xthumbnail-orig-image="thuan.jpg"></a></p>
 <p><font face="Arial" size="2"><b><a href="https://thuanpv.github.io">Van Thuan 
