--- a/news-old.htm
+++ b/news-old.htm
@@ -8,13 +8,134 @@
 
 <body>
 
-<font face="Arial" size="2">      	<b> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<font face="Arial" size="4" color="#800080"> 	Some 	Older News 
+<font face="Arial" size="2">      	<b> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<font face="Arial" size="4" color="#800080"> 
+	Some 	Older News 
 </font></p>
 <p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;</p>
 </b>   	
-<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&lt;2018-19&gt;</p>
+
 	<font face="Arial">      	 	   
-	<ul>
+	
+		<Recent developments>
+		
+		
+		<ul>
+			<li> <i>[Jan23]&nbsp; </i>
+			We are honored to receive <a href="http://www.icse-conferences.org/mostinfluential.html"> ICSE Most Influential Paper Award </a>
+			for ICSE13 paper "SemFix: Program Repair via Semantic Analysis". 
+			<li><i>[Mar22]&nbsp; </i>
+			Honored to receive IEEE TCSE New Directions Award, jointly with 
+				<a href ="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, 
+				for contributions to symbolic execution used for test generation and program repair.
+			
+    <li><i>[Jan22]&nbsp; </i>Ministry of Education (MoE) Tier 3 program 
+	Automated Program Repair funded to 2027, Co-PIs
+	<a href="https://www.comp.nus.edu.sg/~ilya">Ilya Sergey</a> and
+	<a href="https://www.comp.nus.edu.sg/~chinwn">Chin Wei Ngan</a>.<li><i>[Dec21] </i>Thanks to Oracle Labs for their generous 
+	donation to support our research on program repair for security.<li><i>[Oct 21] </i><a href="https://www.cnrsatcreate.cnrs.fr/research/">Descartes</a> program on smart cities with 
+		CNRS has been 
+		<a href="https://news.nus.edu.sg/integrated-decision-smart-cities">launched</a> (<b><a href="projects/Descartes/Recruitment.pdf">Please 
+		apply</a></b>).<li><i>[Sept 21]</i> Congratulations to Xiang Gao for defending his
+	<a href="Students/GaoXiang.pdf">PhD thesis</a>. 
+	<li><i>[July 21]</i>&nbsp;&nbsp; <a href="pdf/ISSTA21.pdf">ISSTA21 paper</a> on patch transplantation in 
+	Linux code receives Best Artifact award.<li><i>[June 21]</i>
+	<a href="pdf/AsiaCCS21.pdf">AsiaCCS 21 paper</a> on fault localization 
+	using fuzz testing gets Best paper award. 
+	<li><i>[May 21] </i>Former PhD student and post-doc <a href="https://mboehme.github.io">
+	Marcel Boehme</a> joining Max-Planck Institute for Security and Privacy as 
+	faculty member.<li><i>[April 21]</i> <a href="https://cpr-tool.github.io">CPR tool</a> on Concolic Program 
+	Repair (see <a href="pdf/PLDI21.pdf">paper</a>) released.</li></font>
+	<font face="Arial" color="#800080">
+	<li>
+	<a href="https://dl.acm.org/journal/tosem/continuous-special-sections-on-security-and-SE">
+	ACM TOSEM Continuous Open Section on Security and Software Engineering</a></font><font face="Arial"> 
+	launched. Please contribute a paper.</li>
+	<li>Will be speaking at the 
+		</font> 	 	 	
+	<font face="Arial" color="#800080">      	 	    
+		<a href="http://nus.edu.sg/nusgs/eopen-academic-faculty/">NUS PhD e-open Day 
+	2020</a></font><font face="Arial">, 29 October 2020</li>
+	</font> 	 	 	
+	<font face="Arial" color="#800080">      	 	   
+	<li><a href="https://www.youtube.com/watch?v=3j3vonnBTac">Singapore International Cyber Week (SICW) R 
+&amp; D Workshop</a></font><font face="Arial">, (watch Day 1) organized by Singapore Cybersecurity Consortium, October 2020.</li>
+
+
+	</font><font face="Arial">      	 	   
+
+
+	<li>Our perspectives article on Fuzz Testing or Fuzzing, due to appear in 
+	IEEE Software<font face="Arial" color="#800080"> </font><font face="Arial"> (</font></font><font face="Arial" color="#800080"><a href="pdf/IEEE-SW-Fuzzing.pdf">Article</a><font face="Arial">)</li>
+	<li>T</font><font face="Arial" color="#800080"><a href= "https://www.comp.nus.edu.sg/~tsunami">SUNAMi project</a><font face="Arial"> </font></font></font> 	 	 	
+	<font face="Arial">building core capabilities in software security completes after more than 5 years.</li>	
+
+	</font> 	 	 	
+
+	<font face="Arial">      	 	   	
+
+	<font face="Arial">      	 	   	
+
+	<li>	 	 	
+	Communications of the ACM,</font></font><font face="Arial" color="#800080"> </font> 	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	   
+	<a href="https://cacm.acm.org/magazines/2020/4#east-asia-and-oceania-region-special-section">
+	Special Section</a><font face="Arial"> </font></font></font></font></font> 	 	 	
+	<font face="Arial">      	 	    	 	 	
+	on East Asia and Oceania is out! </li>
+	</font>
+	<font face="Arial">      	 	   
+	<font face="Arial">      	 	    	 	 	
+	<li>	 	 	
+	Article on </font> </font> 	 	 	
+	<font face="Arial" color="#800080">      	 	   &nbsp;&quot;<a href="pdf/CACM20.pdf">Singapore's 
+		Cybersecurity Ecosystem</a></font><font face="Arial">&quot; appears in Communications of the ACM.</li>
+</ul>
+	
+	</font> 	 	 	
+	<font face="Arial" color="#800080">     
+		
+		
+		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&lt;2018-19&gt;</p>
+		<ul>
+		
+<li>	 	 	
+	<a href="pdf/cacm19.pdf">Article</a><font face="Arial"> </font></font> 	 	 	
+	<font face="Arial">      	 	    	 	 	
+	and</font><font face="Arial" color="#800080"> </font> 	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	    	 	 	
+	<font face="Arial" color="#800080">      	 	    
+	<a href="http://bit.ly/34aSNmy">Video</a><font face="Arial"> </font></font></font></font></font></font> 	 	 	
+	<font face="Arial">      	 	   on &quot;<i>Automated Program 
+	Repair</i>&quot; appeared in Communications of the ACM. </li>	 	
+	
+	<font face="Arial">      	 	    	 	 	
+	<font face="Arial">      	 	    	 	 	
+	<font face="Arial">      	 	    	 	 	
+	<font face="Arial">      	 	    	 	 	
+	<font face="Arial">      	 	   	 	
+	
+<li> 	 	
+	[Jan 2020]
+	</font></font></font></font></font></font> 	 	 	
+	<font face="Arial" color="#800080">      	 	   
+	<a href="https://www.comp.nus.edu.sg/~nsoe-tss/grantCall2launch.htm">Grant call </a></font> 	 	 	
+	<font face="Arial">      	 	   launch by<font face="Arial" color="#800080"> </font></font> 	 	 	
+	<font face="Arial" color="#800080">      	 	   <a href="https://www.comp.nus.edu.sg/~nsoe-tss">National Satellite of Excellence in Trustworthy Software Systems</a></font></li>
+	<li> 	 	
+	<font face="Arial">      	 	   
+		Former PhD student Dr. Van-Thuan Pham joining University of Melbourne as 
+	Lecturer (Asst. Prof.).
+		</font><font face="Arial" color="#800080">      	 	   </li>		
+		
+		
+		
+		
 	<li>
 	<p style="margin-top: 0; margin-bottom: 0" align="left">2019: 
 	<a href="pdf/cacm19.pdf">Article</a> and 
@@ -211,7 +332,7 @@ this year
 </font></i> 	 	
 	<font face="Arial" size="2">      	
 	due to appear in  	FSE14, introduces  software testing for  	stressing energy consumption. <i>Patent  filed</i> for the method.</font><font face="Arial" size="2"><font face="Arial"><li>
-	[June-July 2014]</font></font><font face="Arial" color="#800080" size="2"><a href="http://www.comp.nus.edu.sg/~mboehme">Marcel  <span class="section section1"> <span class="scopediv pageHeader" id="pageHeader2"> <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson2"> <span class="scopediv ofUserUser ofUser" id="ofUserUser2"> <span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString2"> <span class="scopediv body" id="body2">Böhme</span></span></span></span></span></span></a></font><font face="Arial" color="#800080"><span class="section section1"><span class="scopediv pageHeader" id="pageHeader2"><span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson2"><span class="scopediv ofUserUser ofUser" id="ofUserUser2"><span class="scopediv body" id="body2"><span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString2"><font face="Arial" size="4">  
+	[June-July 2014]</font></font><font face="Arial" color="#800080" size="2"><a href="http://www.comp.nus.edu.sg/~mboehme">Marcel  <span class="section section1"> <span class="scopediv pageHeader" id="pageHeader2"> <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson2"> <span class="scopediv ofUserUser ofUser" id="ofUserUser2"> <span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString2"> <span class="scopediv body" id="body2">BÃ¶hme</span></span></span></span></span></span></a></font><font face="Arial" color="#800080"><span class="section section1"><span class="scopediv pageHeader" id="pageHeader2"><span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson2"><span class="scopediv ofUserUser ofUser" id="ofUserUser2"><span class="scopediv body" id="body2"><span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString2"><font face="Arial" size="4">  
 	</font>  </span></span></span></span></span></span> </font> 	 	
 	<span class="section section1"><span class="scopediv pageHeader" id="pageHeader2"><span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson2"><span class="scopediv ofUserUser ofUser" id="ofUserUser2"><span class="scopediv body" id="body2"><span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString2">
 	<font face="Arial" size="2"> 	<font face="Arial">has successfully defended his</font><font face="Arial" color="#800080"> </font> 	 	
