--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
 	</font>   		
 
 
-	<p><font face="Arial">Software testing and analysis, Software security, Trustworthy systems (<i><a href="https://www.youtube.com/watch?v=3j3vonnBTac">overview talk</a></i>).<br>
-		At present, my research group is actively engaged in research on the following topics.</font></p>
+	<p><font face="Arial">Software testing and analysis, Software security, Trustworthy systems.</font></p>
 
 <ul>
 <li><font face="Arial">
