--- a/index.html
+++ b/index.html
@@ -287,23 +287,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021</p>
 
 
 
-<li><p><font face="Arial">
-Keynote at <a href = "https://formal-analysis.com/apsec/2020/">27th Asia Pacific Software Engineering Conference (APSEC) 2020</a>. </p>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/IC31vtWvFDxGkY" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/apsec2020-keynote" title="APSEC2020 Keynote" target="_blank">APSEC2020 Keynote</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
-</li>
-<br>
-
-
-
-
-<li><p><font face="Arial">
-Opening remarks given at 
-<a href="https://www.csa.gov.sg/sicw2020/events/cybersecurity-rnd-workshop">Cybersecurity R&D Workshop at Singapore International Cyberweek 
-(SICW) 2020</a>. </p>
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/E9bgaLkJjbsJWt" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/singapore-international-cyberweek-2020" title="Singapore International Cyberweek 2020" target="_blank">Singapore International Cyberweek 2020</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
-</li>
-<br>
 
 
 <li><p><font face="Arial">
@@ -324,7 +308,8 @@ Protection, Canberra (2018) and ISSTA Summer School, Beijing (2019).
 </p>
 
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/GGRZ86kz5ON66E" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> 
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/GGRZ86kz5ON66E" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" 
+	allowfullscreen> </iframe> 
 
 <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/automated-program-repair-talk-at-mpi-2019" title="Automated Program Repair, Distinguished lecture at MPI 2019" target="_blank">
 	<font size="2">Automated Program Repair, Distinguished lecture at MPI-SWS</font></a><font size="2">
@@ -337,18 +322,7 @@ Protection, Canberra (2018) and ISSTA Summer School, Beijing (2019).
 
 
 
-<li><p> <a href="http://wwwfr.uni.lu/snt/distinguished_lectures">Distinguished Lecture, University of Luxembourg, Interdisciplinary Centre for Security, Reliability and Trust (SnT)</a>, 
-January 2017, Watch <b>
-<a href="https://www.youtube.com/watch?v=qjFe042wurU&feature=youtu.be">VIDEO on 
-Youtube</a></b>.</p>
 
-</font>     </font>   	 	 	 	 	<font face="Arial" size="4">      	 	
-
-
-<font face="Arial" size="2">
-
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/lcCMEWoXGhzIXX" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/binary-analysis-luxembourg" title="Binary Analysis - Luxembourg" target="_blank">Binary Analysis - Luxembourg</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/roychoudhury">Abhik Roychoudhury</a></strong> 
-	</div>
 
 
 </ul>
