--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	&nbsp;</p>
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore, 
+	<font face="Arial"> Abhik Roychoudhury is a Professor of Computer Science at the National University of Singapore, 
 		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
 		in 2000. He is the Director of the National Satellite of Excellence in Trustworthy Software Systems at Singapore. 
 		He has also helped set up the Singapore Cyber-security Consortium in 2016. 
