--- a/papers.html
+++ b/papers.html
@@ -17,7 +17,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE23]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Automated Repair of Programs from Large Language Models
-		( <a href="https://arxiv.org/pdf/2205.10583.pdf">PDF</a> )</b></p>
+		( <a href="./pdf/ICSE23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Xiang Gao, Martin Mirchev, Abhik Roychoudhury, Shin Hwei Tan</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM International Conference on Software Engineering (ICSE) 2023. </p> 
 	 
