--- a/index.html
+++ b/index.html
@@ -57,21 +57,16 @@
 			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>.
 		</font></p>
 	
-	
-		<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
-		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
-		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;was in Singapore, 
-	        thank you to all who attended <b> 14-18 November 2022.</b> </font></p>
-			
+		
 			<br><li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 		<a href="https://nus-apr.github.io"><b>Automated Program Repair</b></a> (2022-27). 
 		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> just happened</p>
 		
-			<br>
-		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
+			
+			
+		<br> <li><p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 		Gave an <a href = "https://esweek.org/education/">education class at Embedded Systems Week 2022</a> on Fuzz Testing and 
 			Program Repair (<b><a href = "https://www.youtube.com/watch?v=Y2JkW4LjdUA">VIDEO</a></b>).
@@ -80,6 +75,8 @@
 	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 2022
 	<a/> for contributions to symbolic execution (jointly with Cristian Cadar).
 			</font></p>
+		
+
 		
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
@@ -188,9 +185,6 @@
 	</ul>
 
   	 	
-
-	 	
-<br>
 
 
 	<ul>
