--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 		Abhik is a member of the Steering committee of the flagship conferences in Software Engineering, 
 		International Conference on Software Engineering (ICSE) and Symposium on Foundations of Software Engineering (FSE). 
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
-		University of Melbourne, Beihang University). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
-		for contributions to symbolic execution. His work on program repair was recognized by the ICSE 2023 Most Influentual Paper Award 
+		University of Melbourne and other places). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
+		for contributions to symbolic execution, as well as with an ICSE Most Influentual Paper Award 
 		for an ICSE 2013 paper suggesting semantic approaches towards program repair. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
@@ -114,11 +114,11 @@
 <ul>
 <li><font face="Arial">
 	<a href="projects/Repair/index.html">Program Repair</a>&nbsp;
-	<b> <a href="https://nus-apr.github.io">RECENT (22-27)</a></b>
+	<b> <a href="https://nus-apr.github.io">RECENT</a></b>
 	</font></li>
 	<br>
 	<li><font face="Arial">
-	<a href="projects/Fuzz">Fuzz testing and Symbolic Execution</a></font></li>
+	<a href="projects/Fuzz">Fuzzing and Symbolic Execution</a></font></li>
 	</ul>
 	 	
 
@@ -225,19 +225,6 @@
 
 <ul> 
 <li><p><font face="Arial">
-Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021</p>
-
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/dvNBDD0PeaqJaQ" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/dagstuhl2021-250620639" title="Dagstuhl2021" target="_blank">Dagstuhl2021</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
-
-</li>
-<br>
-
-
-
-
-
-
-<li><p><font face="Arial">
 [<a href="https://youtu.be/Msr77fg1uhE"><b>VIDEO</b></a>] (Part of) a talk given for PhD students at National University of Singapore PhD open Day, October 2020. <br> Similar talk was given at Doctoral Sympoium of various conferences, including ISSTA 2019.</p>
 
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/aVoYio0BHelIVU" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/nus-phd-eopen-day-2020-239009768" title="NUS PhD e-open day 2020" target="_blank">NUS PhD e-open day 2020</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
@@ -246,14 +233,11 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021</p>
 </li>
 <br>
 
-
 <li><p><font face="Arial">
 Distinguished Lecture at Max-Planck Institute for Software Systems (July 2019) 
-and KAIST (June 2020).  <br> Similar talks were given at at International Summer School on Information Security and 
-Protection, Canberra (2018) and ISSTA Summer School, Beijing (2019).
+and KAIST (June 2020).  <br> Similar talks were given at other venues.
 
 </p>
-
 
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/GGRZ86kz5ON66E" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" 
 	allowfullscreen> </iframe> 
@@ -264,6 +248,14 @@ Protection, Canberra (2018) and ISSTA Summer School, Beijing (2019).
 	</font>
 	<p>&nbsp;</div>
 
+	<br><li><p><font face="Arial">
+Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
+	Similar talk was given at an Education Class in Embedded Systems Week 2022 , see  
+	<b><a href="https://www.youtube.com/watch?v=Y2JkW4LjdUA">VIDEO</a></b></p>
+
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/dvNBDD0PeaqJaQ" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/dagstuhl2021-250620639" title="Dagstuhl2021" target="_blank">Dagstuhl2021</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
+
+</li>
 
 </li>
 
