--- a/index.html
+++ b/index.html
@@ -257,20 +257,16 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 </li>
 
-</li>
-
-
-
 
 
 
 </ul>
-	 
-
-	</font>   	 	 	 	 	</font>      	 	<font face="Arial" size="4">
-	<b><font face="Arial" size="2" color="#800080">
-	<div style="margin-bottom:5px">
-		<p>&nbsp;</div></font></b></font> 	 	 	 	 	<font face="Arial" size="4" color="#800080">      	 	<b> 	 	 	 	 	<hr>    	    <font face="Arial" size="2">  	<p style="margin-top: 0; margin-bottom: 0" align="left">  <b><font face="Arial" size="4" color="#800080">Reflection</font></b></p>
+		 	 
+	
+	
+	<hr>    	  
+	<font face="Arial" size="2">  	<p style="margin-top: 0; margin-bottom: 0" align="left">  
+		<b><font face="Arial" size="4" color="#800080">Reflection</font></b></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left">  &nbsp;</p> 		 	 	</font> 	   	 	 	 	 	
 	</b>   	 	 	 	 	
 	</font>   	 	 	 	 	
