--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <hr>
 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<b><font face="Arial" size="4" color="#800080">R</font></b><font face="Arial" size="4" color="#800080"><b>esearch Interests</b></font></p> 	 
+	<b><font face="Arial" size="4" color="#800080">Research Interests</b></font></p> 	 
 
 	</font>   		
 
@@ -123,10 +123,9 @@
 	 	
 
 <hr>
+	   <b><font face="Arial" size="4" color="#800080">Research Projects</b></font></p> 	 
 
-	<p style="margin-top: 0; margin-bottom: 0" align="left"> <b>Research 
-	Projects</b></p>
-	</font>  
+ 
 
 	<font face="Arial">      	 	 	 	
 
