--- a/index.html
+++ b/index.html
@@ -252,7 +252,12 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 	Similar talk was given at an Education Class in Embedded Systems Week 2022 , see  
 	<b><a href="https://www.youtube.com/watch?v=Y2JkW4LjdUA">VIDEO</a></b></p>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/dvNBDD0PeaqJaQ" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/dagstuhl2021-250620639" title="Dagstuhl2021" target="_blank">Dagstuhl2021</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/dvNBDD0PeaqJaQ" width="595" height="485" 
+	frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; 
+	border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> 
+	<div style="margin-bottom:5px"><font size="2">
+		<strong> <a href="//www.slideshare.net/roychoudhury/dagstuhl2021-250620639" title="Dagstuhl2021" target="_blank">Dagstuhl2021</a> 
+		</strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong></font> </div>
 
 </li>
 
