--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
 	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="students.htm">[TEAM]</a> <a href="research.html"> 	[RESEARCH]</a>&nbsp;<a href="papers.html">[PUBLICATIONS]</a>
-	<a href="tools.html">[TOOLS]</a>&nbsp; <a href="service.html">[SERVICE]</a>&nbsp;&nbsp; 	
-	</font></b>
-	<font face="Arial" size="4" color="#800080">      	 	<b> 	 	 	<p style="margin-top: 0; margin-bottom: 0" align="left"> &nbsp;</p>      	 	 	</b></font><p style="margin-top: 0; margin-bottom: 0">  	 	 	
-	<b> 	 	 	
-	<font face="Arial" size="4" color="#800080">      	 	   
+	<a href="tools.html">[TOOLS]</a>&nbsp; <a href="service.html">[SERVICE]</a>&nbsp;	 	 	   
 	<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
-	Google Scholar</a>&nbsp;&amp; <a href="select-pubs.html">Selected Papers</a></font></b><font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
+	Google Scholar</a>&nbsp;&amp; <a href="select-pubs.html">Selected Papers</a></font></b>
+	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
 
 	</font>   	 
@@ -226,7 +223,12 @@
 <li><p><font face="Arial">
 [<a href="https://youtu.be/Msr77fg1uhE"><b>VIDEO</b></a>] (Part of) a talk given for PhD students at National University of Singapore PhD open Day, October 2020. <br> Similar talk was given at Doctoral Sympoium of various conferences, including ISSTA 2019.</p>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/aVoYio0BHelIVU" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/nus-phd-eopen-day-2020-239009768" title="NUS PhD e-open day 2020" target="_blank">NUS PhD e-open day 2020</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> </div>
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/aVoYio0BHelIVU" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" 
+	scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> 
+	<div style="margin-bottom:5px"><font size="2"> <strong> 
+		<a href="//www.slideshare.net/roychoudhury/nus-phd-eopen-day-2020-239009768" title="NUS PhD e-open day 2020" target="_blank">
+			NUS PhD e-open day 2020</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">
+		Abhik Roychoudhury</a></strong></font> </div>
 
 
 </li>
