--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="students.htm">[TEAM]</a> <a href="research.html"> 	[RESEARCH]</a>&nbsp;<a href="papers.html">[PUBLICATIONS]</a>
 	<a href="tools.html">[TOOLS]</a>&nbsp; <a href="service.html">[SERVICE]</a>&nbsp;	 	 	   
 	<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
-	Google Scholar</a>&nbsp;&amp; <a href="select-pubs.html">Selected Papers</a></font></b>
+	[Google Scholar]</a>&nbsp;&amp; <a href="select-pubs.html">[Selected Papers]</a></font></b>
 	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
 
