--- a/students.htm
+++ b/students.htm
@@ -24,9 +24,11 @@
 
 </ul>
 	
-	<img border="0" src="abhik-pictures/group2022.jpg" width="648" height="324"></h2>
+	<img border="0" src="abhik-pictures/group2022.jpg" width="648" height="324">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img border="0" src="Lunch.jpg" width="576" height="326"></h2>
 <h2><font face="Arial" size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-A recent group photograph taken in 2022 May. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+A recent group photograph taken in 2022 May. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+Group lunch&nbsp; Feb 2023&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 </font><b><font face="Arial">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></h2>
 
 
@@ -184,7 +186,7 @@ Pham</a></b>, <i><a href="Students/Thuan.pdf">Enhancing directed search in black
 <span class="scopediv pageHeader" id="pageHeader">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp; 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp; 
 				<i><a href="Students/Marcel.pdf"><font color="#800080">Automated regression testing and verification of complex code changes</font></a>,</i> 
 Graduated 2014 -&gt; Senior Lecturer, Monash -&gt; Faculty Member, Max-Planck 
 Institute for Security and Privacy.</span></span></span></span></span></span></font></p>
@@ -278,7 +280,7 @@ Senior Research Fellow (2013-17),&nbsp; PhD Aarhus U. (Denmark), Moved to Ulsan
 <span class="scopediv pageHeader" id="pageHeader0">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson0">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser0"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp;Research 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp;Research 
 Fellow &amp; Senior 
 Research Fellow (2015-18), PhD NUS -&gt; </span></span></span></span></span></span>
 <span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString1">
@@ -294,7 +296,7 @@ Monash -&gt; Faculty Member, Max-Planck Institute for Security and Privacy.</spa
 (Switzerland), moved to Politecnico di Milano.</font></p>
 <p><a href="clement.jpg">
 <img border="2" src="clement_small.jpg" xthumbnail-orig-image="clement.jpg"></a></p>
-<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">ClÃ©ment Ballabriga</a></b>, Research Fellow 
+<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">Clément Ballabriga</a></b>, Research Fellow 
 at NUS (2012 - 2014), PhD University of Toulouse 
 (France), Moved to University of Lille (France), currently Associate Professor.</font></p>
 <p><a href="bruno.jpg">
@@ -327,3 +329,4 @@ Sciences), currently Professor.</font></p>
 </body>
 
 </html>
+
