--- a/papers.html
+++ b/papers.html
@@ -31,7 +31,7 @@
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 23]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations (<a href="./pdf/sec23.pdf">pdf</a>)
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
 		Zhengxiong Luo, Junze Yu, Feilong Zuo, Jianzhong Liu, Yu Jiang, Ting Chen, Abhik Roychoudhury, Jiaguang Sun</p>
