--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 			Work on program repair recognized by International Conference on Software Engineering 
-		 <a href = "http://www.icse-conferences.org/mostinfluential.html"> 
+		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
 			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>.
 		</font></p>
 	
