--- a/papers.html
+++ b/papers.html
@@ -7,7 +7,7 @@
 	<font face="Arial" size="4" color="#800000">2023</font></i></b></p>
 	 
 	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APRworkshop-ICSE]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR23]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Program Repair Competition
 		( <a href="./pdf/APR23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Martin Mirchev, Abhik Roychoudhury</p>
